# LAC-ONNX

./: LICENSE  README.md  example.py  lac_crf_transitions.npy  pyproject.toml
lac_onnx/: __init__.py  lac.py
paddle_static/: inference.json
