[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lac-onnx"
version = "0.1.0"
description = "Baidu LAC (Chinese lexical analysis) running on ONNX Runtime — no PaddlePaddle required"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "kniost" }]
keywords = ["nlp", "chinese", "segmentation", "ner", "pos-tagging", "lac", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.20",
    "onnxruntime>=1.10",
]

[project.urls]
Repository = "https://github.com/kniost/lac-onnx"

[tool.setuptools.packages.find]
include = ["lac_onnx"]

[tool.setuptools.package-data]
lac_onnx = ["*.onnx", "*.npy", "*.dic"]
